--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.26.1",
     "bootstrap": "^5.0.2",
     "cross-env": "^7.0.3",
     "react": "^17.0.2",
@@ -17,6 +18,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
+    "redux-logger": "^3.0.6",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
